# tfds-homeworks

./: .gitignore  README.md
crdt/: README.md  crdtcli  go.mod  test
crdt/apps/crdtnode/: crdtactor.go  crdtnode.go  crdtsup.go
crdt/apps/dbnode/: raftactor.go
crdt/cmd/: chadcrdt.go  httpapi.go  httpapi_worker.go
crdt/internal/options/: options.go
integral/: .dockerignore  CMakeLists.txt  Makefile  README.md
integral/configs/: master.env  worker.env
integral/docker/: compose.yaml  master.dockerfile  worker.dockerfile
integral/src/: args.cpp  args.hpp  config.cpp  config.hpp  integral.cpp  integral.hpp  logger.cpp  logger.hpp  main_master.cpp  main_worker.cpp  msg.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp
raft/: README.md  go.mod
raft/apps/dbnode/: raftactor.go
raft/chaddb/apps/dbnode/: dbnode.go  raftactor.go  raftsup.go  storage.go
raft/chaddb/cmd/: chaddb.go  httpapi.go  httpapi_worker.go
raft/chaddb/internal/utils/: utils.go
raft/cmd/: httpapi.go
